--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "thirdweb": "^5.43.2",
     "typescript": "5.5.4"
   },
   "devDependencies": {
