--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.3.0",
     "@worldcoin/idkit": "^1.2.2",
     "@worldcoin/idkit-core": "^1.2.2",
+    "axios": "^1.7.3",
     "eslint": "9.7.0",
     "eslint-config-next": "14.2.5",
     "next": "^14.2.5",
