--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.3",
     "eslint": "9.7.0",
     "eslint-config-next": "14.2.5",
+    "ethers": "^6.13.2",
     "next": "^14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
